--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,7 +1,7 @@
 <h2>Contact me</h2>
 {{#if isSent}}
   <div class="isSent">
-		The message has been sent. File {{ filename }} has been saved
+		The message has been sent. File {{ file }} has been saved
   </div>
 {{/if}}
 {{#if isError}}
@@ -20,7 +20,7 @@
     Title: <input type="text" name="title">
   </label>
 	<label>
-    Project design: <input type="file" name="image" accept="image/jpg, image/jpeg, image/gif image/png" required>
+     Project Design: <input type="file" name="file" accept=".png,.jpg,.gif" required>
   </label>
   <label>
     Message: <textarea name="message"></textarea>
