--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -9,7 +9,8 @@
 		You can't leave fields empty!
 	</div>
 {{/if}}
-<form action="/contact/send-message" method="POST" enctype="multipart/form-data">
+<form action="/contact/send-message" method="POST">
+{{!-- if i delete enctype="multipart/form-data" --}}
   <label>
     Your name: <input type="text" name="author">
   </label>
@@ -20,7 +21,7 @@
     Title: <input type="text" name="title">
   </label>
 	<label>
-     Project Design: <input type="file" name="file" accept=".png,.jpg,.gif" required>
+    Project Design: <input type="file" name="file" accept=".png,.jpg,.gif" required>
   </label>
   <label>
     Message: <textarea name="message"></textarea>
